--- a/SSB_Modulation_and_FDM_System.ipynb
+++ b/SSB_Modulation_and_FDM_System.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/omarhashem80/SSB_Modulation_and_FDM_System/blob/main/SSB_Modulation_and_FDM_System.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,10 +12,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!apt-get install portaudio19-dev\n",
-        "!pip install sounddevice"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,92 +20,34 @@
         "id": "Gg5LtnyMq1fa",
         "outputId": "fb6051eb-8e4a-4d56-d71b-fba738cf9378"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libportaudio2 libportaudiocpp0\n",
-            "Suggested packages:\n",
-            "  portaudio19-doc\n",
-            "The following NEW packages will be installed:\n",
-            "  libportaudio2 libportaudiocpp0 portaudio19-dev\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 49 not upgraded.\n",
-            "Need to get 188 kB of archives.\n",
-            "After this operation, 927 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 libportaudio2 amd64 19.6.0-1.1 [65.3 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy/universe amd64 libportaudiocpp0 amd64 19.6.0-1.1 [16.1 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu jammy/universe amd64 portaudio19-dev amd64 19.6.0-1.1 [106 kB]\n",
-            "Fetched 188 kB in 1s (216 kB/s)\n",
-            "Selecting previously unselected package libportaudio2:amd64.\n",
-            "(Reading database ... 123635 files and directories currently installed.)\n",
-            "Preparing to unpack .../libportaudio2_19.6.0-1.1_amd64.deb ...\n",
-            "Unpacking libportaudio2:amd64 (19.6.0-1.1) ...\n",
-            "Selecting previously unselected package libportaudiocpp0:amd64.\n",
-            "Preparing to unpack .../libportaudiocpp0_19.6.0-1.1_amd64.deb ...\n",
-            "Unpacking libportaudiocpp0:amd64 (19.6.0-1.1) ...\n",
-            "Selecting previously unselected package portaudio19-dev:amd64.\n",
-            "Preparing to unpack .../portaudio19-dev_19.6.0-1.1_amd64.deb ...\n",
-            "Unpacking portaudio19-dev:amd64 (19.6.0-1.1) ...\n",
-            "Setting up libportaudio2:amd64 (19.6.0-1.1) ...\n",
-            "Setting up libportaudiocpp0:amd64 (19.6.0-1.1) ...\n",
-            "Setting up portaudio19-dev:amd64 (19.6.0-1.1) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.4) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libumf.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm_debug.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libhwloc.so.15 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
-            "\n",
-            "Requirement already satisfied: sounddevice in /usr/local/lib/python3.10/dist-packages (0.5.1)\n",
-            "Requirement already satisfied: CFFI>=1.0 in /usr/local/lib/python3.10/dist-packages (from sounddevice) (1.17.1)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from CFFI>=1.0->sounddevice) (2.22)\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "# !apt-get install portaudio19-dev\n",
+        "# !pip install sounddevice"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "wuavtrc0GWIk"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from scipy.io import wavfile\n",
         "import sounddevice as sd\n",
         "import os"
-      ],
-      "metadata": {
-        "id": "wuavtrc0GWIk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SSMZYOjOGXWF"
+      },
+      "outputs": [],
       "source": [
         "class SSB_FDM:\n",
         "    \"\"\"\n",
@@ -350,15 +274,15 @@
         "\n",
         "            self.plot_magnitude_spectrum(demodulated_signal, f\"Demodulated Signal {i} Spectrum\")\n",
         "            plt.show()\n"
-      ],
-      "metadata": {
-        "id": "SSMZYOjOGXWF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RrM_CJuDGZco"
+      },
+      "outputs": [],
       "source": [
         "if __name__ == \"__main__\":\n",
         "    # Define the base directory for input/output files\n",
@@ -371,12 +295,32 @@
         "    # Initialize the SSB_FDM processor and run the process method\n",
         "    processor = SSB_FDM()\n",
         "    processor.process(input_files, output_files)"
-      ],
-      "metadata": {
-        "id": "RrM_CJuDGZco"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "DL",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
